User registration authentication feature
Why:

We could not track the activities of a user because a user couldn't register or login to the platform.

This change addresses the need by:

Creating a user model

Using the password digest feature of bcrypt

Creating a users controller whose sole purpose is to create users

Creating a sessions controller for authenticating users

Creating two forms(login and register) and validating their inputs before sending it to the server

Implementing omniauth strategies that enable users to create and authorize an account using their existing social media accounts

Adding account confimation email feature for users that do not use social media for authorization

Creating a role selection page for user categories on the application

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,9 @@
-@import "materialize.scss";
-@import "base/globals";
-@import "styles/pages";
-@import "styles/dashboard";
+@import "bourbon";
+@import "materialize";
+@import "base/config";
 @import "base/mixins";
+@import "base/helpers";
+@import "base/globals";
+@import "styles/index";
+@import "styles/dashboard";
+@import "styles/users";
