--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,13 +7,15 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200italic,300,300italic,400,400italic,700" rel="stylesheet" type="text/css">
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 </head>
-<body>
-  <%= render "layouts/header" %>
-  <%= render "layouts/sidebar" %>
-
+<body class="<%= "#{params[:controller]}-#{params[:action]}"%>">
+  <%= render "partials/header" unless current_page?(role_path) %>
+  
   <%= yield %>
 
-<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= render "partials/footer" %>
+
+  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 </body>
 </html>
