Implement search for taskers by task. Why:
Users could not search for taskees on the app.

This change addresses the need by:

Creating a search field on the home page.

Creating a search for taskees of the particular task.

Finding taskees by proximity to the user if user is signed in.

Also fetching taskees that are not close to the users location and adding them after all close taskees have been displayed.

Allowing anonymous users to search for taskees by task.

Returning taskee information (including picture) when any is found.

Add feature test to search.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,4 +6,5 @@
 @import "base/globals";
 @import "styles/index";
 @import "styles/dashboard";
-@import "styles/users";
+@import "styles/_users";
+@import "styles/search_result";
