--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -4,22 +4,10 @@
         <%= link_to "Workdey", root_path, class: "brand-logo" %>
         <ul class="right">
           <li>
-            <%= link_to "BECOME A TASKEE", "#", class: "waves-effect waves-light" %>
+            <%= link_to "FAQ", "#", class: "waves-effect waves-light" %>
           </li>
           <li>
-            <%= link_to "SIGN UP", signup_path, class: "waves-effect waves-light" %>
-          </li>
-          <li>
-            <%= link_to "LOG IN", "#", class: "waves-effect waves-light" %>
-          </li>
-          <li>
-            <%= link_to raw("<i class='fa fa-facebook'></i>"), "http://on.fb.me/1QhFNBq", target: "_blank" %>
-          </li>
-          <li>
-            <%= link_to raw("<i class='fa fa-twitter'></i>"), "http://bit.ly/1ljVaN6", target: "_blank" %>
-          </li>
-          <li>
-            <%= link_to raw("<i class='fa fa-google-plus'></i>"), "http://bit.ly/1PBXU3l", target: "_blank" %>
+            <%= link_to "SIGN IN", signin_path, class: "waves-effect waves-light" %>
           </li>
         </ul>
       </div>
