--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,6 @@
 @import "base/mixins";
 @import "base/helpers";
 @import "base/globals";
-@import "styles/pages";
+@import "styles/index";
 @import "styles/dashboard";
 @import "styles/users";
