--- a/app/assets/stylesheets/styles/_users.scss
+++ b/app/assets/stylesheets/styles/_users.scss
@@ -1,4 +1,4 @@
-.signup {
+.auth {
   margin-top: em(30px);
   padding-top: em(20px);
   padding-bottom: em(20px);
@@ -13,6 +13,23 @@
     position: absolute;
     right: -12%;
     top: 0;
+  }
+
+  &.login {
+
+    form {
+
+      .input-field {
+
+        &:nth-of-type(1), &:nth-of-type(2) {
+          .material-icons {
+            top: 18%;
+            left: 4%;
+          }
+        }
+      }
+    }
+
   }
 
   form {
