--- a/app/views/dashboard/home.html.erb
+++ b/app/views/dashboard/home.html.erb
@@ -18,9 +18,7 @@
           </a>
         </li>
         <li>
-          <a class="waves-effect waves-light" href="/logout">
-            <i class="fa fa-sign-out"></i>
-          </a>
+          <%= link_to raw("<i class='fa fa-sign-out'></i>"), signout_path, method: :delete, class: "waves-effect waves-light" %>
         </li>
       </ul>
     </div>
