--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,9 +1,19 @@
 <div class="row page-footer">
   <footer class="center-align col s12">
   <div class="row">
-    <div class="col s6">
-      <h5>Workdey</h5>
-      <p>Live a smarter life</p>
+    <div class="col s6 social-media-links">
+      <h5>We are social</h5>
+      <ul>
+        <li>
+            <%= link_to raw("<i class='fa fa-facebook'></i>"), "http://on.fb.me/1QhFNBq", target: "_blank" %>
+          </li>
+          <li>
+            <%= link_to raw("<i class='fa fa-twitter'></i>"), "http://bit.ly/1ljVaN6", target: "_blank" %>
+          </li>
+          <li>
+            <%= link_to raw("<i class='fa fa-google-plus'></i>"), "http://bit.ly/1PBXU3l", target: "_blank" %>
+          </li>
+      </ul>
     </div>
 
     <div class="col s6 footer-links">
