--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -54,8 +54,7 @@
     <div class="card">
       <div class="card-content">
         <p class="be-cool">
-          Be cool. 
-          just sign up with: 
+          Sign up with: 
         </p>
         <p>
           <%= link_to raw("<i class='fa fa-facebook-square'></i> Facebook"), "/auth/facebook", class: "btn btn-fb" %>
