--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,6 @@
 <section class="dotnavigation dotstyle">
   <ul>
-    <li><a href="#home" data-scroll>Home</a></li>
+    <li class="active"><a href="#home" data-scroll>Home</a></li>
     <li><a href="#step" data-scroll>Steps</a></li>
     <li><a href="#why-use" data-scroll>Why</a></li>
   </ul>
