--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -20,7 +20,7 @@
       <h5>Links</h5>
       <ul>
         <li><a href="#">About us</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><%= link_to "Contact us", contact_path %></li>
         <li><a href="#">Terms</a></li>
       </ul>
     </div>
