Implement search with location and not geolocation because of speed of search query. Add scss file for the search result page.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,4 +2,5 @@
 @import "base/globals";
 @import "styles/pages";
 @import "styles/dashboard";
+@import "styles/search_result";
 @import "base/mixins";
