[Feature] Verification quiz for Taskee
Why?
  Because we want to make sure the taskee is well informed about the required guidelines for the use of this service

This addresses the need by:
  Creating a verification quiz out of the stated guidelines for the Taskee

[Finished #107829776]

--- a/app/assets/stylesheets/base/_globals.scss
+++ b/app/assets/stylesheets/base/_globals.scss
@@ -83,7 +83,7 @@ strong {
 .btn {
   background-color: transparentize($primary-color, .1);
 
-  &:hover {
+  &:hover, &:active, &:focus {
     background-color: $primary-color;
   }
 }
