--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,8 @@
 @import "base/helpers";
 @import "base/globals";
 @import "styles/index";
+@import "styles/choose_role";
+@import "styles/quiz";
 @import "styles/dashboard";
 @import "styles/_users";
 @import "styles/search_result";
