--- a/app/views/dashboard/choose_role.html.erb
+++ b/app/views/dashboard/choose_role.html.erb
@@ -12,13 +12,20 @@
         Just a few quick things to get your account all set up
       </p>
     </header>
+
+    <h3>How would you like to use this platform?</h3>
+    <div class="roles">
+      <button class="btn btn-tasker">
+        I need help with tasks <i class="material-icons left">weekend</i>
+      </button>
+
+      <button class="btn btn-taskee">
+        I want to carry out tasks <i class="material-icons left">directions_bike</i>
+      </button>
+    </div>
   </section>
 
-  <section>
-    <header>
-      <h2>How would you like to use this platform?</h2>
-    </header>
-    <%= link_to "I need help with tasks", role_path(role: "tasker"), method: :post, class: "btn" %>
-    <%= link_to "I want to carry out tasks", role_path(role: "taskee"), method: :post, class: "btn" %>
-  </section>
+  <%= render "partials/tasker_guidelines" %>
+  <%= render "partials/taskee_guidelines" %>
+  
 </main>
