Implement the profile settings page on dashboard
 Why:
   Users have no profile settings page on the app
   This change addresses the need by:
   Creating a profile settings page
   Creating a profile update page.
   Creating a PORO for profile update and an action in the dashboard controller.
   Keeping all images on cloudinary.
   Adding feature test to the profile update branch.
[Finished #107901600]

--- a/app/assets/stylesheets/base/_globals.scss
+++ b/app/assets/stylesheets/base/_globals.scss
@@ -178,3 +178,10 @@ strong {
 textarea {
   min-height: 10em;
 }
+
+// Select tag
+select {
+  display: inline-block !important;
+  visibility: visible !important;
+
+}
