--- a/app/views/dashboard/profile_view.html.erb
+++ b/app/views/dashboard/profile_view.html.erb
@@ -3,13 +3,13 @@
     <div class="row view_profile">
       <ul class= "col m8 offset-m2" >
         <h2 class= "col m6 offset-m4">User Profile</h2>
-        <%= cl_image_tag(@current_user.image_url, { class: "responsive-img circle left" }) %>
+        <%= cl_image_tag(@user.image_url, { class: "responsive-img circle left" }) %>
         <div class="col m7 offset-m1">
-          <li><%= @current_user.firstname.capitalize + " " + @current_user.lastname.capitalize %></li>
+          <li><%= @user.firstname.capitalize + " " + @user.lastname.capitalize %></li>
 
-          <li><%= @current_user.street_address %></li>
-          <li><%= @current_user.city %></li>
-          <li><%= @current_user.state %></li>
+          <li><%= @user.street_address %></li>
+          <li><%= @user.city %></li>
+          <li><%= @user.state %></li>
         </div>
       </ul>
     </div>
