Implement search for taskees by task on dashboard
Why:
  Taskers can need to be able to search for other users (taskees) who could carry out certain tasks.

This address the need by:
  Creating a search_for_taskee partial.
  Adding a search box to taskers dashboard.
  Allowing taskers to view a summary of each taskee's profile and view more on the taskee's profile page.
  Allowing taskers to assign task to the taskee of their choice based on the users returned by the search.
[Finished #111958913]

--- a/app/views/pages/search_result.html.erb
+++ b/app/views/pages/search_result.html.erb
@@ -7,7 +7,7 @@
     <% else %>
       <% @taskees.each do | taskee | %>
         <div class="taskee_card col m3 offset-m1 s6 left">
-          <p><%= image_tag "boy.jpg", { class: "responsive-img circle" }%></p>
+          <p><%= image_tag taskee.image_url, { class: "responsive-img circle" }%></p>
           <p><%= taskee.firstname.concat(taskee.lastname).titleize %></p>
           <p><%= taskee.street_address + "," %></p>
           <p><%= (taskee.city + ", " + "#{taskee.state}" + ".").titleize %></p>
