--- a/app/views/dashboard/home.html.erb
+++ b/app/views/dashboard/home.html.erb
@@ -1,5 +1,3 @@
-<% if current_user.confirmed %>
-
 <% if flash[:mail].present?  %>
   <div class="flash-mail">
     <i class="material-icons close-flash">close</i>
@@ -7,13 +5,15 @@
   </div>
 <% end %>
 
+<% if current_user.confirmed %>
+
 <main>
   <section class="main container center-align">
     <div class="row">
       <section class="col s12">
-        <div class="user_info card">
+        <div class="user_info">
           <h3>Welcome <%= "#{current_user.firstname} #{current_user.lastname}" %> </h3>
-          <%= render "partials/search_for_taskee" %>
+          <%= render "partials/search_for_taskee" if current_user.user_type == "tasker" %>
         </div>
       </section>
     </div>
@@ -21,13 +21,6 @@
 </main>
 
 <% else %>
-
-<% if flash[:mail].present?  %>
-  <div class="flash-mail">
-    <i class="material-icons close-flash">close</i>
-    <p><%= flash[:mail] %></p>
-  </div>
-<% end %>
 
 <main>
   <section class="confirm-mail-first container">
