--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,12 @@
 </head>
 <body class="<%= "#{params[:controller]}-#{params[:action]}"%>">
   <%= render "partials/header" unless (current_page?(role_path) || current_page?(quiz_path)) %>
-  
+
   <%= yield %>
 
   <%= render "partials/footer" %>
 
-  <%= javascript_include_tag "https://cdn.firebase.com/js/client/2.3.2/firebase.js" %>
+  <%= javascript_include_tag "https://cdn.firebase.com/js/client/2.3.2/firebase.js" if current_page?(quiz_path) %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 </body>
 </html>
