--- a/app/views/partials/_error_msg.html.erb
+++ b/app/views/partials/_error_msg.html.erb
@@ -1,11 +1,11 @@
-<% if @user.errors.any? %>
+<% if object.errors.any? %>
   <div class="error-explanation center-align">
     <i class="material-icons">bug_report</i>
     <p class="error-count">
-      The form contains <%= pluralize(@user.errors.count, "error") %>.
+      The form contains <%= pluralize(object.errors.count, "error") %>.
     </p>
     <ul>
-    <% @user.errors.full_messages.each do |msg| %>
+    <% object.errors.full_messages.each do |msg| %>
       <li>* <%= msg %></li>
     <% end %>
     </ul>
