--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -3,16 +3,40 @@
     <nav class="nav-wrapper">
       <div class="container">
         <%= link_to "Workdey", dashboard_path, class: "brand-logo" %>
-        <ul class="right">
+        <a href="#" class="right dropdown" data-activates="options">
+          <%= cl_image_tag current_user.image_url, class: "user-profile-image" %>
+          <span class="username">
+            <%= "#{current_user.firstname} #{current_user.lastname}" %>
+            <i class="fa fa-caret-down"></i>
+          </span>
+        </a>
+
+        <ul class="right dashboard-navlinks">
+          <li class="notification-badge">
+            <span>2 new</span>
+          </li>
+          <li>
+            <a href="#" class="tooltipped" data-position="right" data-delay="50" data-tooltip="Notifications">
+              <i class="material-icons">notifications_active</i>
+            </a>
+          </li>
+          <% if current_user.user_type == "tasker" %>
+            <li>
+              <a href="#" class="tooltipped" data-position="right" data-delay="50" data-tooltip="Manage Tasks">
+                <i class="material-icons">rate_review</i>
+              </a>
+          </li>
+          <% end %>
+        </ul>
+
+        <ul id="options" class="dropdown-content">
           <% if current_user.confirmed %>
             <li>
-              <%= link_to "NOTIFICATIONS", "#", class: "waves-effect waves-light" %>
-              <%= link_to "UPDATE PROFILE", profile_path, class: "waves-effect waves-light" %>
-              <%= link_to "VIEW PROFILE", user_profile_path, class: "waves-effect waves-light" %>
+              <%= link_to "Update Profile", profile_path, class: "waves-effect waves-light" %>
             </li>
           <% end %>
           <li>
-            <%= link_to "SIGN OUT", signout_path, method: :delete, class: "waves-effect waves-light" %>
+            <%= link_to "Sign Out", signout_path, method: :delete, class: "waves-effect waves-light" %>
           </li>
         </ul>
       </div>
